[gd_scene load_steps=2 format=3 uid="uid://uon26itdva7d"]

[ext_resource type="Script" uid="uid://chk7hbr771xdi" path="res://src/game/overlay/resource_bar/custom_tooltip.gd" id="1_yce5f"]

[node name="MarginContainer" type="MarginContainer" node_paths=PackedStringArray("tooltip_header", "tooltip_icon", "tooltip_content")]
offset_right = 136.0
offset_bottom = 111.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 15
script = ExtResource("1_yce5f")
tooltip_header = NodePath("VBoxContainer/HBoxContainer/TooltipHeader")
tooltip_icon = NodePath("VBoxContainer/HBoxContainer/TooltipIcon")
tooltip_content = NodePath("VBoxContainer/TooltipContent")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TooltipIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 3
stretch_mode = 5

[node name="TooltipHeader" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "TOOLTIP_LABEL"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TooltipContent" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
bbcode_enabled = true
text = "TOOLTIP_DESCRIPTION"
fit_content = true
